@@ -38,7 +38,6 @@ Developers
 #include "incompressiblePhase.H"
 #include "capillarityModel.H"
 #include "relativePermeabilityModel.H"
-#include "simpleControl.H"
 #include "sourceEventFile.H"
 #include "outputEventFile.H"
 #include "patchEventFile.H"
@@ -52,9 +51,9 @@ int main(int argc, char *argv[])
     #include "setRootCase.H"
     #include "createTime.H"
     #include "createMesh.H"
-    simpleControl simple(mesh);
     #include "readGravitationalAcceleration.H"
     #include "createFields.H"
+    #include "readPicardControls.H"
     scalar massConservativeTerms = 1; // useless, just for createthetaFields.H re-use
     #include "createthetaFields.H"
     #include "readEvent.H"
@@ -62,15 +61,16 @@ int main(int argc, char *argv[])
     // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * //
 
     Info<< "\nStarting time loop\n" << endl;
+    scalar hEqnResidual = GREAT;
 
-    while (simple.loop(runTime))
+    while (hEqnResidual > tolerancePicard && runTime.value() < runTime.endTime().value()  )
     {
-
+        runTime++;
         Info << "Time = " << runTime.timeName() << nl << endl;
 
         #include "computeSourceTerm.H"
         #include "hEqnPicard.H"
-        #include "updateProperties.H"
+        #include "checkResidual.H"
 
         Info << "Saturation theta " << " Min(theta) = " << gMin(theta.internalField()) << " Max(theta) = " << gMax(theta.internalField()) <<  endl;
         Info << "Head pressure h  " << " Min(h) = " << gMin(h.internalField()) << " Max(h) = " << gMax(h.internalField()) <<  endl;
@@ -81,6 +81,13 @@ int main(int argc, char *argv[])
             << "  ClockTime = " << runTime.elapsedClockTime() << " s"
             << nl << endl;
     }
+
+    if (hEqnResidual > tolerancePicard)
+    {
+        WarningIn("stationaryGroundwaterFoam.C") << "Solution not converged, final residual is : "
+            << hEqnResidual << " increase the end time for convergence" << nl  << endl;
+    }
+    runTime.writeNow();
 
     Info<< "End\n" << endl;
 
